hw06/test/zm-hw6-classFun-override-MismatchParam-int1-class.fmj
public int main() { }

public class C0  {
    public class C0 id(int a){
        return new C0();
    }
}

public class C1 extends C0{
    public class C0 id(class C0 a){ // error
        return new C0();
    }
}
